# ComBolt-Hybrid

Ampt-v1.26t9b-v2.26t9b/: Split_the_result.sh  input.ampt  nohup.out  nseed_runtime
ComBolt-ITA/: CMakeLists.txt  ComBolt-ITA.cpp  LICENSE.txt  README.md  input_parameters.py  run-ComBolt-hyb.py
ComBolt-ITA/src/: Administration.cpp  Administration.h  BoltzEQ_solver.h  CMakeLists.txt  LinkDef.h  LinkDef_particle.h  ROOT_admin.cpp  ROOT_admin.h  Tmunu_and_hyd.h  collision_kernel.h  cornelius.cpp  cornelius.h  error_handler.h  freeze-out.h  grid.h  initial_info.cpp  initial_info.h  initial_state.h  interpolation.h  lattice_EOS.h  note.txt  observables.h  parameters.h  parameters_class.h  particle_frzout.cpp  particle_frzout.h  particle_urqmd.cpp  particle_urqmd.h
ComBolt-ITA/src/.cache/clangd/index/: Administration.h.C2E58F31C0514B89.idx  RK4MoC.cpp.1FEE02F3AC6339C4.idx  RK4MoC.h.8D6F218739D41862.idx  ROOT_admin.h.126CE32A531D7799.idx  grid.h.4C72EC5212E4CE5C.idx  initial_state.cpp.2BF2DD546645F8CE.idx  initial_state.h.B249760CE8C1AB28.idx  parameters.h.40257B9C6C21D425.idx
ROOT-macro/: plot.C  read_tree.C  read_treeOld.C  read_tree_C.d  text_to_root.C
ROOT-macro/01-pTSpectrum/: macro_pT_Spectrum.C  run.sh
ROOT-macro/02-SourceSize/: .macro_pT_Spectrum.C.swp  Notes.txt  macro_SourceSize.C  old-macro_SourceSize_01.C
trento-master/: CMakeLists.txt
trento-master/events/: .run.sh.swp  run.sh
trento-master/events/event_set7/: events
urqmd-afterburner/: CMakeLists.txt
urqmd-afterburner/urqmd/: output.f
